# ChangeLog for mail-client/alot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  Synced with mail-client/alot-0.3.1::gentoo, again.

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  dev-python/sphinx dependency for 'doc' flag.

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  Ebuild header fix.

  17 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  Synced with mail-client/alot-0.3.1::gentoo.

  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  FAQ file no longer exists.

  15 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
  Removed all keywords, because it's a live ebuild.

*alot-9999 (15 Feb 2012)

  15 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> +alot-9999.ebuild,
  +metadata.xml:
  Initial ebuild based on mail-client/alot-0.21-r1::gentoo.
