@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-EBUILD alot-9999.ebuild 1009 RMD160 f36579f9116652627caa1f1d85d549ad8647ab56 SHA1 3029656cb910e35eb4dbec582b131a6aa5307215 SHA256 f558d0202a29e93a7e7bd4cd9a5c695406708260fcb7d096c31502e34b559fd8
-MISC ChangeLog 1001 RMD160 d1c32a805c588b75198908c958130c64fe265cd4 SHA1 0afb90cc7697815f36178c457a0c9958437d7927 SHA256 93d436a80b65b9405ecfa736abc2fbedcc1fee062e01ba1007e31ca37e39614e
-MISC metadata.xml 508 RMD160 e31531de2d3a36fa6ab9059fc28429ec9b1031d8 SHA1 1550cbfc72e8d047d2fdefa6c159111ed65c1e0a SHA256 0ba17706f6bb083a9b3b43447c1df7ee824ee85ab5dd7e333e7750d12b438edc
+EBUILD alot-9999.ebuild 1099 SHA256 d82e872574de02321168e7397c63675bd58fa431a3b713bb9fef92f43a31aa7e SHA512 1022020a47a0d21ed990ce2d95650f5430a75e01193f02a3406145bd5e1af56577b8158cce0168fb5a9b4ce4e04d9cbf55dbfec2a023aea50eb25f1b4b68b239 WHIRLPOOL 3c2d58ab7f7566405b552482ae9688aeec903dc2f1c133292b9873c7399af7cab0d39c101d4650501fb5c08564d0f81b390866c196e10e11bc65a755e6d13eda
+MISC ChangeLog 1174 SHA256 20252d3b8fd35aa3b70797a708c77789ff815e04e190c038063d77e991f86b41 SHA512 12bd1531bc574c830d145e15c57e49ffcdafcf1333b3caef019b7bf0e1eb95ec8cd8fdd8daf072a045f4b53adede3f6dd7c59e648151457f922e9d6f49feeaa8 WHIRLPOOL 78e74b8effd6041f57efedb52b75c2fb1e262bc82682c244f7944e5f038347e7b4c7c40d8665212cec5391dab2886ba9f8941fbbcbbadf747dadd9356265b7e8
+MISC metadata.xml 508 SHA256 0ba17706f6bb083a9b3b43447c1df7ee824ee85ab5dd7e333e7750d12b438edc SHA512 2d42334483d47b836630f229701f62a365517b07e92f2865f281f60a302b383f46e214bbf402278ba9c5255b09d6670ce0f0ea572138a608f22f14fc02a620a1 WHIRLPOOL 6a39be1bc8f9c8bef444c9d7bf08fbae49a4930e23c5ff9b4056ab2abff67146caf88a35f0dadc22d8d6173b74bd9aca5189bf0ca5bc159b5a30a7abb06118f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPt2ODAAoJEPATRTHh2/q1r6YIAJtEyAuueCHx/T4A+166bhsj
-fLLpGh9Z39HR71+z12S/mVUvdOwMjo96Xn1qm3WKi5TFEwF06eCpM1fkAZc1yH4t
-fQDFdGp3+Y0Nd0G4ex0jPqfu7TS3cemKvFo0oC4575VnxE18U/DrVbUKa338Jhaz
-9iZZ2k3cDTpoEKyi0LOZ7zfHkBdv/JZbCC7QII1jBaEvuz0bb5G0ZQdCcioKz7cw
-yG2dyuOW4K433+5hBx1SJxXlSne3UUjUwv3jutV5dXkrZ1AZnKNm8o/HRuGLJTt/
-OD9F1X31CUjJKDN/EKy4ogjF7hR2XeTp40VaxKaGIpLoKBz0BBoos/Xm3IkGh60=
-=l1y8
+iQEcBAEBCAAGBQJQGN7eAAoJEPATRTHh2/q1eKEH/ROV1Y8LozaFR5E+bipxSRab
+ef40/peUb3m+w+jfBehEmQW+E9k45OqU/BGhIvghJsa7QTJRvMG8EsVhzdh/hRpe
+Hv5clLGpbKH+rIaLVz41xUTUTSgAuTb6Y6rm/XN+Tpytl3ah7L8nq+j7OCY1jrw5
+v/7aLF43wuAc7X8w+xf7pL65Lnp2PyPhoN2exvCSYwT9rjyJXetcgSJGsfkD8Y3Y
+dfpJ54XBnkPeC8hv/p5feQZ86CAwU5ppiPM9uDm4m07o3nsuvwe7JqEFFlGpkS1q
+2AENwO9TK1fl3KuKv/0SLTfsY988x3yFlIaOKnqzszBOEAA6UnOCg6O9USJaa9I=
+=ZNEn
 -----END PGP SIGNATURE-----
