@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
+  Depends on pygpgme instead of pyme. Adding encoding header for all .py files
+  in src_prepare.
+
   19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> alot-9999.ebuild:
   Synced with mail-client/alot-0.3.1::gentoo, again.
 
